packages/sportsee-web/src/components/side-navbar/sideNavbar.css
.side-navbar {
  background-color: #020203;
  display: flex;
  flex-direction: column;
  width: 117px;
  height: 100vh;
  align-items: center;
  position: fixed;
}

.icons-container {
  margin-top: 170px;
  margin-bottom: 200px;
  display: flex;
  width: 64px;
  flex-direction: column;
  gap: 15px;
}

.side-navbar small {
  transform: rotate(270deg);
  color: #ffff;
  width: 145px;
}

